# microreader

./: .gitignore  CMakeLists.txt  platformio.ini  readme  sdkconfig.defaults  sdkconfig.esp32c3  sdkconfig.esp32c3-qemu  sdkconfig.esp32c3-x3  sdkconfig.qemu  test_output.txt
.github/: copilot-instructions.md
components/microreader_core/: CMakeLists.txt
core/include/microreader/core/: Application.h  Display.h  Font.h  Input.h  Log.h  Loop.h
core/src/: Application.cpp  Loop.cpp
desktop/: CMakeLists.txt  display.h  logger.h  main.cpp  runtime.h
esp32/main/: CMakeLists.txt  display.h  input.h  logger.h  main.cpp  runtime.h
lib/microreader/: Application.cpp  Application.h  Canvas.h  Demo.cpp  Demo.h  Display.h  DisplayQueue.h  Font.h  FontManager.h  HeapLog.h  Input.h  Log.h  Loop.cpp  Loop.h  LutCalibration.cpp  LutCalibration.h  Runtime.h  ScreenManager.h  version.h
lib/microreader/content/: BitmapFont.h  BitmapFontFormat.h  Book.cpp  Book.h  BookIndex.cpp  BookIndex.h  ContentModel.h  CssParser.cpp  CssParser.h  EpubParser.cpp  EpubParser.h  Font.h  HtmlExporter.cpp  HtmlExporter.h  IParagraphSource.h  ImageDecoder.cpp  ImageDecoder.h  JpegDecoder.cpp  MrbConverter.cpp  MrbConverter.h  MrbFormat.h  MrbReader.cpp  MrbReader.h  MrbWriter.cpp  MrbWriter.h  PngDecoder.cpp  TextLayout.cpp  TextLayout.h  XmlReader.cpp  XmlReader.h  ZipReader.cpp  ZipReader.h
lib/microreader/content/hyphenation/: Hyphenation.cpp  Hyphenation.h
lib/microreader/content/hyphenation/Liang/: hyph-en-us.h  liang_hyphenation_patterns.h
lib/microreader/content/mrb/: MrbConverter.cpp  MrbConverter.h  MrbFormat.h  MrbReader.cpp  MrbReader.h  MrbWriter.cpp  MrbWriter.h
lib/microreader/demos/: BookSelectScreen.cpp  BookSelectScreen.h  BouncingBallDemo.cpp  BouncingBallDemo.h  IScreen.h  MenuDemo.cpp  MenuDemo.h  PatternDemo.cpp  PatternDemo.h  ReaderScreen.cpp  ReaderScreen.h  TextShowcaseDemo.cpp  TextShowcaseDemo.h
lib/microreader/display/: Canvas.h  Display.h  DisplayQueue.h  DrawBuffer.h  Font.h  ui_font_header.h  ui_font_small.h
lib/microreader/resources/: bebop_image.h
lib/microreader/screens/: BookSelectScreen.cpp  BookSelectScreen.h  BouncingBallDemo.cpp  BouncingBallDemo.h  ChapterSelectScreen.cpp  ChapterSelectScreen.h  GrayscaleDemo.cpp  GrayscaleDemo.h  IScreen.h  LinksScreen.cpp  LinksScreen.h  ListMenuScreen.cpp  ListMenuScreen.h  MainMenu.cpp  MainMenu.h  MenuDemo.cpp  MenuDemo.h  ReaderOptionsScreen.cpp  ReaderOptionsScreen.h  ReaderScreen.cpp  ReaderScreen.h  SettingsScreen.cpp  SettingsScreen.h  spiffs_image_data.h
resources/: test_image_grayscale.h
resources/fonts/: alegreya.mfb  bookerly.mfb  font-0.mbf  font-1.mbf  font-2.mbf  font-3.mbf  font-4.mbf  font-5.mbf  font-6.mbf  font-bundle.mfb  font-large.mbf  font-normal.mbf  font-small.mbf  font-xlarge.mbf  font-xxlarge.mbf  ui-header.mbf  ui-small.mbf
resources/sd fonts/: Cartisse.mfb  NV_Bitter.mfb  NV_Charis.mfb  NV_Cooper.mfb  NV_Garamond.mfb  NV_Jost.mfb  NV_Legible_Next.mfb  NV_Palatium.mfb  Readerly.mfb  Sourcerer.mfb
resources/sleep/: sleep.mgr  sleep_0.mgr  sleep_2.mgr
sd/fonts/: font-small.mbf  ui-header.mbf  ui-small.mbf
src/: main.cpp
src/core/: BatteryMonitor.cpp
src/ui/screens/: SettingsScreen.cpp  SettingsScreen.h
test/: CMakeLists.txt  _check_font_coverage.py  _check_invisible.py  _find_nachweis.py  _find_rechtsnachweis.py  _inspect_ohler.py  _raw_html.py  _search_rechts.py  analyze_epubs.py  build_and_test.py  chapter_test_results.txt  diag.cpp  diag_ohler.cpp  diag_streaming.cpp  test_out.txt
test/bench/: ConversionBench.cpp  esp32_batch_bench.cpp
test/fixtures/: basic.epub  generate_regression_epub.py  generate_test_epubs.py  large_chapter.epub  multi_chapter.epub  multilingual.epub  nested_dirs.epub  regression_test.epub  special_chars.epub  stored.epub  test_font_20px.h  test_font_20px_latin.h  with_css.epub  with_images.epub
test/integration/: BulkBookTest.cpp  DebugLayoutTest.cpp  DitherComparisonTest.cpp  HrBackwardTest.cpp  HtmlExportTest.cpp  LinkNavigationTest.cpp  RealBookTest.cpp
test/scripts/: analyze_xhtml_patterns.py  check_ohler_spine.py  diagnose_images.py  diagnose_output.py  download_diverse_gutenberg.py  download_gutenberg.py  epub_classes.py  find_empty_pages.py  list_books.py  test_multi_open.py
test/support/: FontLoader.h  ScreenshotDisplay.h  TestBooks.h  TestChapterSource.h  TestPaths.h
test/unit/: BitmapFontTest.cpp  CssParserTest.cpp  DebugOhlerTest.cpp  DisplayQueueRenderTest.cpp  EpubParserTest.cpp  HtmlExportTest.cpp  HyphenationTest.cpp  ImageDecoderTest.cpp  LaidOutParagraphTest.cpp  LinksScreenTest.cpp  MrbFormatTest.cpp  MrbLayoutComparisonTest.cpp  NavigationTest.cpp  OhlerDiag.cpp  PageLayoutTest.cpp  RealBookTest.cpp  StreamingPipelineTest.cpp  TestBooks.h  TextLayoutParaTest.cpp  TextLayoutTest.cpp  XmlReaderTest.cpp  ZipReaderTest.cpp
tools/: build_assets.py  copy_firmware.py  debug_upload.py  download_gutenberg.py  download_terminus2.py  generate_font.py  generate_version.py  image_to_mgr.py  lut_editor.py  png_to_grayscale_layers.py  requirements.txt  run_qemu.py  serial_capture.py  serial_cmd.py  switch_partition.py  test_all_books.py  test_books.py  test_navigate.py  test_serial_cmd.py  upload_batch.py  upload_epub.py
